--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,14 @@
   @apply left-1/2 top-1/2 -translate-y-1/2 -translate-x-1/2;
 }
 
+.text-gradient {
+  background: linear-gradient(113.48deg, #0d7ce9 15.56%, #15cff1 92.25%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+
 @keyframes test {
   0% {
     clip-path: polygon(0 0, 100% 0%, 100% 100%, 50% 100%, 0 100%);
