--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,48 @@
     transform-origin: 100% 0%;
   }
 }
+
+.flipping {
+  position: relative;
+  width: 32px;
+  height: 32px;
+  animation: flipping-pyg5ol 2s infinite linear;
+  perspective: 120px;
+}
+
+.flipping:before {
+  content: "";
+  display: block;
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  animation: flipping-ew9517 1s infinite;
+  background-color: #474bff;
+  transform-origin: bottom;
+}
+
+@keyframes flipping-pyg5ol {
+  0%,
+  50% {
+    transform: rotate(45deg);
+  }
+
+  50.001%,
+  100% {
+    transform: rotate(-45deg);
+  }
+}
+
+@keyframes flipping-ew9517 {
+  0% {
+    transform: translate(0, 0) rotateX(0deg);
+  }
+
+  50% {
+    transform: translate(0, -100%) rotateX(0deg);
+  }
+
+  100% {
+    transform: translate(0, -100%) rotateX(-180deg);
+  }
+}
